# readwise-links

./: .editorconfig  .gitignore  Justfile  README.md  archive.md  pyproject.toml
.github/workflows/: archive.yml  deploy.yml
app/: logger.py  main.py  reports.py  scrape.py
app/formatters/: json.py  markdown.py
app/schemas/: readwise.py
app/services/: readwise.py
app/templates/: index.html
links/: archive.md  highlight.json  later.md  new.md  note.json  shortlist.md
links/tags/: agents.md  agile.md  aiogram.md  alembic.md  alpine.md  api.md  architecture.md  astro.md  basb.md  bitcoin.md  blockchain.md  bluesky.md  book.md  bot.md  caching.md  career.md  celery.md  changelog.md  chi.md  clang.md  cli.md  clojure.md  communication.md  concurrency.md  css.md  darksouls3.md  db.md  ddd.md  debugging.md  development.md  devops.md  devtools.md  diy.md  dj.md  django.md  dns.md  docker.md  elixir.md  errorhandling.md  estimation.md  (+93 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/assets/: articles.json
web/src/components/: ArticleCard.vue  Header.vue  Tag.vue  TagFilter.vue
web/src/router/: index.ts
web/src/types/: note.d.ts
web/src/views/: About.vue  Home.vue
